--- a/clock.html
+++ b/clock.html
@@ -22,7 +22,7 @@
 <body>
   <div id="Clock"></div>
 
-  <script>
+  <script type="text/javascript">
     function showTime() {
         var date = new Date();
         var h = date.getHours();
